# py-afv

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  README_PyPI.md  main.py  pyproject.toml  test.py
.github/workflows/: publish-to-pypi.yml  tests.yml  zenodo-display.yml
afv/: finite_voronoi.py
docs/: usage.rst
examples/jupyter/: custom_plot.ipynb  periodic_plotting.ipynb
pyafv/: _version.py
tests/: conftest.py  test_core.py  test_geom.py
tests/data/: debug_pts.npy  init_forces.csv  init_pts.csv  init_seed407_pts.csv  init_seed46_pts.csv
